ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "myapp-full.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: front
            port:
              number: 80
      - pathType: Prefix
        path: "/rest"
        backend:
          service:
            name: backend
            port:
              number: 8080
